fix: Overlapping UI - blog tags

--- a/antora-ui-camel/src/css/blog.css
+++ b/antora-ui-camel/src/css/blog.css
@@ -12,6 +12,9 @@
   margin-top: 2.5rem;
   padding-right: 2rem;
   line-height: 2rem;
+  align-self: flex-start;
+  position: sticky;
+  top: 2rem;
 }
 
 @media screen and (width <= 1024px) {
@@ -24,7 +27,7 @@
   list-style: none;
   padding: 0;
   margin-top: 1rem;
-  max-height: 990px;
+  max-height: calc(100vh - 300px);
   overflow-y: auto;
   display: inline-block;
 }
